--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ profile
 ../.idea
 *.pyc
 .idea/
-Tools/Liste des animés.docx
+Tools/Liste des animés.docxTools/Planning de visionnage.docx
+Tools/Planning de visionnage.txt
