--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ profile
 .idea/
 Tools/Liste des animés.docxTools/Planning de visionnage.docx
 Tools/Planning de visionnage.txt
+Tools/Liste des animés.docx
+Tools/Planning de visionnage.docx
