--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ profile
 ../.idea
 *.pyc
 .idea/
+venv/
 Tools/Liste des animés.docxTools/Planning de visionnage.docx
 Tools/Planning de visionnage.txt
 Tools/Liste des animés.docx
