Correction fichier .desktop + chemins

--- a/packaging/archlinux/PKGBUILD
+++ b/packaging/archlinux/PKGBUILD
@@ -8,8 +8,8 @@ license=('')
 conflicts=('MyAnimeManager2')
 groups=("★ seigneurfuo: Paquets persos")
 depends=("python" "python-pyqt5")
-source=("myanimemanager2.desktop" "git+file:///home/seigneurfuo/Projets/MyAnimeManager/MyAnimeManager 2#branch=master")
-md5sums=('ebf453c3c15fd530d7d26c9a67d2304d'
+source=("myanimemanager2.desktop" "git+file:///home/seigneurfuo/Projets/MyAnimeManager/MyAnimeManager2#branch=master")
+md5sums=('6f121d31c416706f10a19719744c0d0c'
          'SKIP')
 
 PKGDEST="$(pwd)/output"
@@ -20,7 +20,6 @@ pkgver() {
 
 package() {
 	mkdir -p "$pkgdir/opt"
-	mv "$srcdir/MyAnimeManager 2" "$srcdir/MyAnimeManager2"
 	cp -R "$srcdir/MyAnimeManager2" "$pkgdir/opt"
 
     # Supression des fichiers inutiles
