--- a/packaging/archlinux/myanimemanager2.desktop
+++ b/packaging/archlinux/myanimemanager2.desktop
@@ -5,7 +5,7 @@ Type=Application
 Comment="Un gestionnaire d"animés et de séries codé en Python"
 Terminal=false
 Exec=python /opt/MyAnimeManager2/MyAnimeManager2.py
-Icon=/opt/MyAnimeManager2/ressources/icons/icon
+Icon=/opt/MyAnimeManager2/ressources/icons/icon.png
 StartupNotify=true
 Categories=AudioVideo;
 GenericName=MyAnimeManager2
