Premiers tests de packaging Debian.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Tools/Liste des animés.docxTools/Planning de visionnage.docx
 Tools/Planning de visionnage.txt
 Tools/Liste des animés.docx
 Tools/Planning de visionnage.docx
+packaging/flatpak/.~Theme.md
+packaging/archlinux/MyAnimeManager2/
