--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Tools/Liste des animés.docx
 Tools/Planning de visionnage.docx
 packaging/flatpak/.~Theme.md
 packaging/archlinux/MyAnimeManager2/
+packaging/debian/pkgdir/
